# BailStudy

./: .gitignore  README.md  bailOnRealData.py  pyproject.toml  setup.py
.github/workflows/: docker-ghcr.yml
bailstudy/: bailBenchEval.py  bailOnRealData.py  generatePlots.py  oldCodePorting.py  processBailBenchEval.py  router.py  tensorizeModels.py  testBailsGeorg.py  utils.py
bailstudy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bailstudy/data/: bailBench.csv  bailHarmBench.csv  shareGPT.py  utils.py  wildchat.py
bailstudy/prompts/: bailPrompt.py  bailPrompts.py  bailString.py  bailTool.py
bailstudy/scripts/: bailOnRealData.py
docker/: Dockerfile
plots/bailRates/: anthropic bail.tex  anthropic no refuse bail.tex  anthropic.tex  anthropic_bail.tex  anthropic_no_refuse_bail.tex  anthropic_no_refuse_bail_refusal.tex  bails_georg_bail.tex  bails_georg_bail_refusal.tex  bails_georg_no_refuse_bail.tex  crossmodel_bail.tex  crossmodel_bail_refusal.tex  crossmodel_no_refuse_bail_refusal.tex  crossmodelcrossmodel-GPT-3.5-Turbo_bail.tex  crossmodelcrossmodel-GPT-3.5-Turbo_bail_refusal.tex  crossmodelcrossmodel-GPT-3.5-Turbo_no_refuse_bail.tex  crossmodelcrossmodel-GPT-3.5-Turbo_no_refuse_bail_refusal.tex  crossmodelcrossmodel-GPT-4_bail.tex  crossmodelcrossmodel-GPT-4_bail_refusal.tex  crossmodelcrossmodel-GPT-4_no_refuse_bail.tex  crossmodelcrossmodel-GPT-4_no_refuse_bail_refusal.tex  jailbreak bail refusal.tex  jailbreak bail.tex  jailbreak no refuse bail refusal.tex  jailbreak no refuse bail.tex  jailbreak.tex  jailbreak3 bail refusal.tex  (+50 more)
(+4 files in other folders)
